--- a/Day01/lab02.htm
+++ b/Day01/lab02.htm
@@ -3,6 +3,7 @@
 <html>
 <head>
     <script>
+        //Math.round(Math.random()*101);
 //        var Ext = {
 //            application: function (cfg) {
 //                if(cfg.launch)
