--- a/Day01/senchaoo2.htm
+++ b/Day01/senchaoo2.htm
@@ -16,6 +16,7 @@
                 this.initConfig(cfg);
             },
             playCricket: function () {
+                this.initConfig({name:"Sachin"});
                 console.log("Playing Cricket");
             }
         });
