--- a/Day02/index.htm
+++ b/Day02/index.htm
@@ -24,7 +24,8 @@
                       height: 400, width: 400, fullscreen: true,
                       items: [
                                 {
-                                    xtype : "mypanel"
+                                    xtype : "mypanel",
+                                    id : "panel1" 
                                 }
                             ]
                   });
